--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,node
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,node
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,node,dotenv
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,node,dotenv
+
+### dotenv ###
+.env
 
 ### Node ###
 # Logs
@@ -77,7 +80,6 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -160,4 +162,4 @@ dist
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,node
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,node,dotenv
