--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sebasBetancourt/portafolio-freelance#readme",
   "dependencies": {
     "chalk": "^5.4.1",
+    "dotenv": "^17.2.1",
     "inquirer": "^12.8.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5"
