--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/sebasBetancourt/portafolio-freelance#readme",
   "dependencies": {
+    "chak": "^0.0.1-security",
     "chalk": "^5.4.1",
     "dotenv": "^17.2.1",
-    "inquirer": "^12.8.2",
+    "inquirer": "^12.9.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5"
   }
