--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chak": "^0.0.1-security",
     "chalk": "^5.5.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "inquirer": "^12.9.0",
     "mongodb": "^6.18.0",
